--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <p><a href="./sql/insert-update.html">INSERT / UPDATE</a></p>
             <p><a href="./sql/alter.html">ALTER</a></p>
             <p><a href="./sql/join.html">JOIN</a></p>
+            <p><a href="./sql/union.html">UNION</a></p>
+            <p><a href="./sql/case.html">CASE</a></p>
             <p><a href="./sql/truncate.html">TRUNCATE</a></p>
             <p><a href="./sql/drop.html">DROP</a></p>
             <p><a href="./sql/transaktionen.html">Transaktionen</a></p>
@@ -35,6 +37,7 @@
             <p><a href="./datenbanken/modelle.html">Relationales und ER-Modell</a></p>
             <p><a href="./datenbanken/ri.html">Referenzielle Integrität</a></p>
             <p><a href="./datenbanken/normalformen.html">1.-3. Normalform</a></p>
+            <p><a href="./datenbanken/datenbanktypen.html">Datenbanktypen</a></p>
         </div>        
 
         <div class="abschnitt">
@@ -83,13 +86,14 @@
             <p><a href="./programmieren/rekursion.html">Rekursion</a></p>
             <p><a href="./programmieren/objektorientierung.html">Objektorientierung</a></p>
             <p><a href="./programmieren/linked-lists.html">Linked Lists</a></p>
+            <p><a href="./programmieren/xml.html">XML</a></p>
+            <p><a href="./programmieren/json.html">JSON</a></p>
             <p><a href="./programmieren/interface.html">Interface</a></p>
             <p><a href="./programmieren/abstrakte_klassen.html">abstrakte Klassen</a></p>        
             <p><a href="./programmieren/generische_klassen.html">generische Klassen</a></p>
-            <br>
             <p><a href="./programmieren/abstrakt_generisch_interface.html">abstrakte Klasse<br>vs<br>generische Klasse<br>vs<br>Interface</a></p>
-            <br>
             <p><a href="./programmieren/vergleich-sprachen.html">Programmiersprachen im Vergleich</a></p>
+            <p><a href="./programmieren/beste-programmiersprache.html">Was ist die beste Programmiersprache?</a></p>
         </div>
 
         <div class="abschnitt">
@@ -98,18 +102,17 @@
             <p><a href="./softwareentwicklung/projektphasen.html">Projektphasen</a></p>
             <p><a href="./softwareentwicklung/crud.html">CRUD</a></p>
             <p><a href="./softwareentwicklung/agile.html">Agiles Projektmanagement</a></p>
-            <p>Scrum</p>
-            <p>Kanban</p>
+            <p><a href="./softwareentwicklung/scrum.html">Scrum</a></p>
+            <p><a href="./softwareentwicklung/kanban.html">Kanban</a></p>
             <p>MDSD<br><small>Model-Driven Software Development</small></p>
             <p>TDD<br><small>Test-Driven Development</small></p>
             <p><a href="./softwareentwicklung/wasserfallmodell.html">Wasserfallmodell</a></p>
             <p><a href="./softwareentwicklung/spiralmodell.html">Spiralmodell</a></p>
             <p><a href="./softwareentwicklung/v-modell.html">V-Modell</a></p>
-            <p>REST-API</p>
+            <p><a href="./softwareentwicklung/rest.html">REST</a></p>
             <p>Nutzwertanalyse</p>
             <p>Kostenanalyse</p>
-            <p>Lastenheft</p>
-            <p>Pflichtenheft</p>            
+            <p>Lasten- und Pflichtenheft</p>
         </div>
 
         <div class="abschnitt">
