--- a/programmieren/linked-lists.html
+++ b/programmieren/linked-lists.html
@@ -11,7 +11,7 @@
 
     <h1>Linked Lists</h1>
     <p class="text"><small>Frage an ChatGPT: Erkläre mir linked lists und zeige mir ein Beispiel in C#</small></p>
-    <p class="text">Klar! Eine Linked List (verkettete Liste) ist eine Datenstruktur, bei der Elemente (sogenannte „Nodes“) linear angeordnet sind, aber nicht im Speicher hintereinander liegen. Stattdessen verweist jedes Element auf das nächste – dadurch kann man Elemente effizient einfügen oder löschen, ohne den gesamten Speicherblock zu verschieben (wie z. B. bei einem Array).</p>
+    <p class="text">Eine Linked List (verkettete Liste) ist eine Datenstruktur, bei der Elemente (sogenannte „Nodes“) linear angeordnet sind, aber nicht im Speicher hintereinander liegen. Stattdessen verweist jedes Element auf das nächste – dadurch kann man Elemente effizient einfügen oder löschen, ohne den gesamten Speicherblock zu verschieben (wie z. B. bei einem Array).</p>
     <p class="text">Eine Linked List besteht aus:</p>
     <ul class="text">
         <li><b>Node (Knoten)</b>: Enthält die Daten und einen Verweis auf den nächsten Knoten.</li>
