--- a/softwareentwicklung/kanban.html
+++ b/softwareentwicklung/kanban.html
@@ -10,15 +10,44 @@
 <body>
 
     <h1>Kanban</h1>
-    <p class="text"></p>
+    <p><small>Frage an ChatGPT: Erkläre mit bitte Kanban</small></p>
+    <p class="text">Kanban ist eine Methode des Arbeits- und Projektmanagements, die hilft, Aufgaben effizient zu organisieren und den Arbeitsfluss zu optimieren. Sie stammt ursprünglich aus der japanischen Automobilindustrie (Toyota) und wird heute oft in der Softwareentwicklung, im Projektmanagement oder allgemein in agilen Teams eingesetzt.</p>
 
-    <style>
-        table{
-            width: 1000px;
-            position: relative;
-            left: calc(50% - 500px);
-        }
-    </style>
+    <p class="text">Typisch ist ein Kanban-Board, das meist in drei Spalten unterteilt ist:</p>
+    <a href="kanban.png"><img src="kanban.png" width="500px"></a>
+    <p class="text">Jede Aufgabe ist eine Karte (z.B. ein Post-it oder ein digitales Ticket), die von links nach rechts wandert, je nachdem, wo sie im Prozess steht.</p>
+
+    <h2>Kernprinzipien</h2>
+    <ol class="text">
+        <li>
+            <b>Visualisiere die Arbeit:</b><br>
+            Alle Aufgaben sind sichtbar - das Board zeigt auf einen Blick, woran gearbeitet wird.
+        </li>
+        <li>
+            <b>Begrenze parallele Arbeit (WIP = Work In Progress):</b><br>
+            Teams sollen nicht zu viele Aufgaben gleichzeitig machen. So bleibt der Fokus klar, und Arbeit wird wirklich fertig.
+        </li>
+        <li>
+            <b>Steuere den Fluss:</b><br>
+            Beobachte, wie Aufgaben durchs System laufen. Gibt es Staus? Wo dauert's zu lange? Ziel: ein stetiger, gleichmäßiger Flow.
+        </li>
+        <li>
+            <b>Mache Regeln explizit:</b><br>
+            Es ist klar definiert, wann eine Aufgabe z.B. von „In Progress“ zu „Done“ wechseln darf (z.B. nach Review).
+        </li>
+        <li>
+            <b>Verbessere kontinuierlich:</b><br>
+            Kanban ist keine Einmal-Lösung - Teams schauen regelmäßig, wie sie besser arbeiten können.
+        </li>
+    </ol>
+
+    <h2>Vorteile</h2>
+    <ul class="text">
+        <li>Besserer Überblick</li>
+        <li>Schnellere Reaktion auf Veränderungen</li>
+        <li>Weniger Multitasking → höhere Effizienz</li>
+        <li>Teamübergreifende Transparenz</li>
+    </ul>
     
 </body>
 </html>
