--- a/softwareentwicklung/scrum.html
+++ b/softwareentwicklung/scrum.html
@@ -10,15 +10,126 @@
 <body>
 
     <h1>Scrum</h1>
-    <p class="text"></p>
+    <p><small>Frage an ChatGPT: Erkläre mir bitte Scrum</small></p>
+    <p class="text">Scrum ist ein agiles Rahmenwerk (Framework) für die Zusammenarbeit in Teams – vor allem in der Softwareentwicklung, aber auch in anderen Bereichen. Es hilft Teams, komplexe Aufgaben strukturiert, transparent und inkrementell zu bearbeiten.</p>
+    <p class="text">Man kann sagen:</p>        
+    <p class="text einruecken-zitat">Scrum ist wie ein Spielplan, nach dem ein Team zusammenarbeitet, um schnell, flexibel und kundenorientiert zu liefern.</p>
 
+    <h2>Grundidee</h2>
+    <p class="text">Anstatt ein riesiges Projekt komplett durchzuplanen (wie im klassischen Projektmanagement), arbeitet man in kleinen Schritten, den sogenannten Sprints (meist 1–4 Wochen lang). Nach jedem Sprint gibt es ein fertiges Zwischenprodukt, das man testen, zeigen oder ausliefern kann.</p>
+
+    <h2>Rollen</h2>
+    <table>
+        <tr>
+            <th>Product Owner (PO)</th>
+            <td>
+                <ul>
+                    <li>Verantwortlich für das „Was“ entwickelt wird</li>
+                    <li>Stellt sicher, dass das Team Wert schafft</li>
+                    <li>Pflegt das Product Backlog (die Aufgabenliste)</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <th>Scrum Master</th>
+            <td>
+                <ul>
+                    <li>Achtet darauf, dass Scrum richtig angewendet wird</li>
+                    <li>Unterstützt das Team dabei, Hindernisse zu beseitigen</li>
+                    <li>Sozusagen ein Coach & Facilitator</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <th>Entwicklungsteam (Dev Team)</th>
+            <td>
+                <ul>
+                    <li>Die Leute, die das Produkt bauen</li>
+                    <li>Selbstorganisiert & interdisziplinär</li>
+                </ul>
+            </td>
+        </tr>
+    </table><br>    
+
+    <h2>Zentrale Elemente (Artefakte)</h2>
+    <table>
+        <tr>
+            <th>Product Backlog</th>
+            <td>
+                <ul>
+                    <li>Liste mit allen Anforderungen und Ideen fürs Produkt</li>
+                    <li>Vom PO priorisiert</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <th>Sprint Backlog</th>
+            <td>
+                <ul>
+                    <li>Aufgaben, die das Team sich für den aktuellen Sprint vornimmt</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <th>Increment</th>
+            <td>
+                <ul>
+                    <li>Das Ergebnis eines Sprints - ein funktionsfähiges Produktstück</li>
+                </ul>
+            </td>
+        </tr>
+    </table><br>
+
+    <a href="scrum.png"><img src="scrum.png" height="400px"></a>
+    <br>
+
+    <h2>Die wichtigsten Ereignisse (Events):</h2>
+    <table>
+        <tr>
+            <th>Sprint Planning</th>
+            <td>
+                <ul>
+                    <li>Zu Beginn des Sprints: Was machen wir im nächsten Sprint?</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <th>Daily Scrum (Daily Stand-up)</th>
+            <td>
+                <ul>
+                    <li>Kurzes, tägliches Team-Meeting (max. 15 Minuten)</li>
+                    <li>Jeder sagt: Was habe ich getan? Was mache ich? Gibt’s Blocker?</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <th>Sprint Review</th>
+            <td>
+                <ul>
+                    <li>Am Ende des Sprints: Vorstellung des fertigen Produkts</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <th>Sprint Retrospective</th>
+            <td>
+                <ul>
+                    <li>Nach dem Review: Wie lief der Sprint? Was können wir verbessern?</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
 
     
     <style>
         table{
-            width: 1000px;
+            width: 500px;
             position: relative;
-            left: calc(50% - 500px);
+            left: calc(50% - 250px);
+        }
+
+        ul { 
+            list-style-type: "-  ";
         }
     </style>
     
