--- a/programmieren/grundlagen.html
+++ b/programmieren/grundlagen.html
@@ -383,9 +383,14 @@
                     while ($i &lt; 10);
                 </code>
             </td>
-        </tr>
-        
+        </tr>        
     </table>
+
+    <h2>Variablen im Speicher</h2>
+    <img src="speicher1.png">
+    <hr>
+    <img src="speicher2.png">
+
 
     <h2>Beispiel in C# (Konsolenanwendung)</h2>
 <pre>
@@ -546,6 +551,7 @@ $test-&#62;fussschleife(3);
 meine_zahl(42);
 mein_text("Mein Text");
 </pre>
+    
 
 <style>
     pre{
@@ -567,6 +573,10 @@ mein_text("Mein Text");
 
     table{
         width: 100%;
+    }
+
+    hr{
+        width: 40%;
     }
 </style>
 
