--- a/softwareentwicklung/tdd.html
+++ b/softwareentwicklung/tdd.html
@@ -10,6 +10,41 @@
 <body>
 
     <h1>TDD - Test-Driven Development</h1>
+    <p class="text">Test-driven Development (TDD) ist eine Softwareentwicklungsmethode, bei der Tests die Entwicklung steuern. Dabei werden Tests vor dem eigentlichen Code geschrieben. TDD ist ein iterativer Prozess, der in Zyklen abläuft.</p>
+
+    <p class="text">Wie funktioniert TDD?</p>
+    <ol class="text">
+        <li>Schreiben eines Tests, der zunächst fehlschlägt</li>
+        <li>Entwickeln des minimalen Codes, um den Test zu bestehen</li>
+        <li>Refaktorisieren des Codes, um die Anforderungen zu erfüllen und die Qualität zu verbessern</li>
+    </ol>
+
+    <a href="https://www.testautomatisierung.org/lexikon/test-driven-development-tdd/" target="_blank"><img src="tdd.png" width="500px"></a>
+
+    <p class="text">Vorteile von TDD</p>
+    <ul class="text">
+        <li>Verbesserte Qualität der Software</li>
+        <li>Reduzierte Fehlerquote</li>
+        <li>Bessere Strukturierung des Codes</li>
+        <li>Schnellere Fehleranalyse</li>
+        <li>Weniger Wartungsarbeiten</li>
+        <li>Verbesserte Effizienz und Produktivität</li>
+        <li>kein ungetesteter Code</li>
+        <li>saubere/testbare Architektur</li>
+    </ul>
+
+    <p class="text">Best Practices für TDD</p>
+    <ul class="text">
+        <li>Tests für alle möglichen Fälle schreiben</li>
+        <li>Tests für Randbedingungen und Edge Cases schreiben</li>
+        <li>Tests automatisieren</li>
+        <li>Test-Suite mit Unit-, Integrations- und Acceptance-Tests ausbalancieren</li>
+        <li>Refactoring regelmäßig durchführen</li>
+        <li>Schnelle Feedback-Schleife einrichten</li>
+    </ul>
+
+    <p class="text"></p>
+    <p class="text"></p>
     <p class="text"></p>
 
 
