--- a/index.html
+++ b/index.html
@@ -83,39 +83,49 @@
             <h3>Programmierung</h3>
             <hr>
             <p><a href="./programmieren/grundlagen.html">Grundlagen</a></p>
+            <p>Compiler und Interpreter</p>
             <p>Heap und Stack</p>
-            <p><a href="./programmieren/rekursion.html">Rekursion</a></p>
-            <p><a href="./programmieren/objektorientierung.html">Objektorientierung</a></p>
+            <p><a href="./programmieren/rekursion.html">Rekursion</a></p>            
             <p><a href="./programmieren/linked-lists.html">Linked Lists</a></p>
             <p><a href="./programmieren/xml.html">XML</a></p>
             <p><a href="./programmieren/json.html">JSON</a></p>
-            <p><a href="./programmieren/interface.html">Interface</a></p>
-            <p><a href="./programmieren/abstrakte_klassen.html">abstrakte Klassen</a></p>        
-            <p><a href="./programmieren/generische_klassen.html">generische Klassen</a></p>
-            <p><a href="./programmieren/abstrakt_generisch_interface.html">abstrakte Klasse<br>vs<br>generische Klasse<br>vs<br>Interface</a></p>
+            <p><a href="./programmieren/ajax.html">AJAX</a></p>                       
             <p><a href="./programmieren/vergleich-sprachen.html">Programmiersprachen im Vergleich</a></p>
             <p><a href="./programmieren/beste-programmiersprache.html">Was ist die beste Programmiersprache?</a></p>
         </div>
 
         <div class="abschnitt">
+            <h3>Objektorientierung</h3>
+            <hr>
+            <p><a href="./programmieren/objektorientierung.html">Objektorientierung</a></p>
+            <p><a href="./programmieren/interface.html">Interface</a></p>
+            <p><a href="./programmieren/abstrakte_klassen.html">abstrakte Klassen</a></p>        
+            <p><a href="./programmieren/generische_klassen.html">generische Klassen</a></p>
+            <p><a href="./programmieren/abstrakt_generisch_interface.html">abstr. Kl. vs gen. Kl. vs Interface</a></p>
+        </div>
+
+        <div class="abschnitt">
             <h3>Softwareentwicklung</h3>
             <hr>
-            <p><a href="./softwareentwicklung/projektphasen.html">Projektphasen</a></p>
-            <p><a href="./softwareentwicklung/crud.html">CRUD</a></p>
-            <p><a href="./softwareentwicklung/agile.html">Agiles Projektmanagement</a></p>
-            <p><a href="./softwareentwicklung/scrum.html">Scrum</a></p>
-            <p><a href="./softwareentwicklung/kanban.html">Kanban</a></p>            
-            <p><a href="./softwareentwicklung/wasserfallmodell.html">Wasserfallmodell</a></p>
-            <p><a href="./softwareentwicklung/spiralmodell.html">Spiralmodell</a></p>
-            <p><a href="./softwareentwicklung/v-modell.html">V-Modell</a></p>
-            <p><a href="./softwareentwicklung/rest.html">REST</a></p>
-            <p><a href="./softwareentwicklung/mdsd.html">MDSD<br><small>Model-Driven Software Development</small></a></p>
-            <p><a href="./softwareentwicklung/tdd.html">TDD<br><small>Test-Driven Development</small></a></p>
-            <p><a href="./softwareentwicklung/whitebox-tests.html">Whiteboxtests</a></p>
-            <p><a href="./softwareentwicklung/blackbox-tests.html">Blackboxtests</a></p>            
-            <p>Nutzwertanalyse</p>            
-            <p>Kostenanalyse</p>
-            <p>Lasten- und Pflichtenheft</p>
+            <div class="softwareentwicklung">                
+                <p><a href="./softwareentwicklung/projektphasen.html">Projektphasen</a></p>
+                <p><a href="./softwareentwicklung/projektrollen.html">Rollen im Projekt</a></p>
+                <p><a href="./softwareentwicklung/crud.html">CRUD</a></p>
+                <p><a href="./softwareentwicklung/agile.html">Agiles Projektmanagement</a></p>
+                <p><a href="./softwareentwicklung/scrum.html">Scrum</a></p>
+                <p><a href="./softwareentwicklung/kanban.html">Kanban</a></p>            
+                <p><a href="./softwareentwicklung/wasserfallmodell.html">Wasserfallmodell</a></p>
+                <p><a href="./softwareentwicklung/spiralmodell.html">Spiralmodell</a></p>
+                <p><a href="./softwareentwicklung/v-modell.html">V-Modell</a></p>
+                <p><a href="./softwareentwicklung/rest.html">REST</a></p>
+                <p><a href="./softwareentwicklung/mdsd.html">MDSD<br><small>Model-Driven Software Development</small></a></p>
+                <p><a href="./softwareentwicklung/tdd.html">TDD<br><small>Test-Driven Development</small></a></p>
+                <p><a href="./softwareentwicklung/whitebox-tests.html">Whiteboxtests</a></p>
+                <p><a href="./softwareentwicklung/blackbox-tests.html">Blackboxtests</a></p>            
+                <p>Nutzwertanalyse</p>            
+                <p>Kostenanalyse</p>
+                <p>Lasten- und Pflichtenheft</p>
+            </div>
         </div>
 
         <div class="abschnitt">
