--- a/programmieren/vergleich-sprachen.html
+++ b/programmieren/vergleich-sprachen.html
@@ -13,6 +13,27 @@
         <p id="text">        
             <button id="php-btn">PHP</button>
             <button id="javascript-btn">JavaScript</button>
+            
+            <!-- <button id="java-btn">Java</button> -->
+            <!-- <button id="pascal-btn">Pascal</button> -->
+            <!-- <button id="delphi-btn">Delphi</button> -->
+            <!-- <button id="lua-btn">Lua</button> -->
+            <!-- <button id="fortran-btn">Fortran</button> -->
+            <!-- <button id="cobol-btn">Cobol</button> -->
+            <!-- <button id="r-btn">R</button> -->
+            <!-- <button id="rust-btn">Rust</button> -->
+            <!-- <button id="swift-btn">Swift</button> -->
+            <!-- <button id="go-btn">Go</button> -->
+            <!-- <button id="kotlin-btn">Kotlin</button> -->
+            <!-- <button id="matlab-btn">Matlab</button> -->
+            <!-- <button id="ada-btn">Ada</button> -->
+            <!-- <button id="ruby-btn">Ruby</button> -->
+            <!-- <button id="dart-btn">Dart</button> -->
+            <!-- <button id="scratch-btn">Scratch</button> -->
+            <!-- <button id="assembler-btn">Assembler</button> -->
+            <!-- <button id="scala-btn">Scala</button> -->
+
+
             <button id="csharp-btn">C#</button>
             <button id="cpp-btn">C++</button>
             <button id="c-btn">C</button>
