--- a/programmieren/vergleich-sprachen.html
+++ b/programmieren/vergleich-sprachen.html
@@ -20,6 +20,16 @@
             <!-- <button id="lua-btn">Lua</button> -->
             <!-- <button id="fortran-btn">Fortran</button> -->
             <!-- <button id="cobol-btn">Cobol</button> -->
+
+            <button id="csharp-btn">C#</button>
+            <button id="cpp-btn">C++</button>
+            <button id="c-btn">C</button>
+            <button id="python-btn">Python</button>
+
+            <!-- <button id="basic-btn">Basic</button> -->
+
+            <button id="visualbasic-btn">VB .NET</button>
+            
             <!-- <button id="r-btn">R</button> -->
             <!-- <button id="rust-btn">Rust</button> -->
             <!-- <button id="swift-btn">Swift</button> -->
@@ -33,14 +43,11 @@
             <!-- <button id="assembler-btn">Assembler</button> -->
             <!-- <button id="scala-btn">Scala</button> -->
 
-
-            <button id="csharp-btn">C#</button>
-            <button id="cpp-btn">C++</button>
-            <button id="c-btn">C</button>
-            <button id="python-btn">Python</button>
-            <button id="visualbasic-btn">VB .NET</button>
             <button id="bash-btn">bash</button>
             <button id="powershell-btn">PowerShell</button>
+
+            <!-- <button id="batch-btn">batch</button> -->
+
                   
             <button id="alle"><label class="allezeigen">I  O</label></button>
         </p>
