--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <hr>
             <p><a href="./programmieren/grundlagen.html">Grundlagen</a></p>
             <p>Compiler und Interpreter</p>
+            <p>Kompilierprozess</p>
             <p>Heap und Stack</p>
             <p><a href="./programmieren/rekursion.html">Rekursion</a></p>            
             <p><a href="./programmieren/linked-lists.html">Linked Lists</a></p>
@@ -157,6 +158,7 @@
             <hr>
             <p><a href="./linux/">Linux-Basics</a></p>
             <p>Git</p>
+            <p>RAID</p>
         </div>
         
 
