--- a/programmieren/grundlagen.html
+++ b/programmieren/grundlagen.html
@@ -85,21 +85,21 @@
         <tr>
             <td class="mitte">double</td>
             <td colspan="2">
-                Kommazahl, 64 Bit, 15 Dezimalstellen, z.B.: 3.14159265358979323846<br>
-                <i>z.B.: </i>
+                Kommazahl, 64 Bit, 15 Dezimalstellen<br>
+                <i>z.B.: 3.14159265358979323846</i>
             </td>
         </tr>
         <tr>
             <td class="mitte">char</td>
             <td colspan="2">
                 Ein einzelnes Zeichen<br>
-                <i>z.B.: </i>
+                <i>z.B.: A, C, D</i>
             </td>
         </tr>
         <tr>
             <td class="mitte">string</td>
             <td colspan="2">Zeichenkette<br>
-                <i>z.B.: </i>
+                <i>z.B.: Hallo Welt</i>
             </td>
         </tr>        
         <tr>
